--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       for more information.
       -->
     <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnfuFg5iXZMa29b9PovYJUSHYeRKjgCkw&callback=initMap&libraries=places&v=weekly"
+        src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&libraries=places&v=weekly"
         defer></script>
 </body>
 
